--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
 		"prettier-plugin-svelte": "^2.7.0",
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.7.1",
-		"typescript": "^4.7.2"
+		"typescript": "^4.7.2",
+		"mdsvex": "^0.10.5"
 	},
 	"type": "module",
 	"dependencies": {
