--- a/package.json
+++ b/package.json
@@ -19,16 +19,17 @@
 		"eslint": "^8.16.0",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-svelte3": "^4.0.0",
+		"mdsvex": "^0.10.5",
 		"prettier": "^2.6.2",
 		"prettier-plugin-svelte": "^2.7.0",
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.7.1",
-		"typescript": "^4.7.2",
-		"mdsvex": "^0.10.5"
+		"typescript": "^4.7.2"
 	},
 	"type": "module",
 	"dependencies": {
 		"@keplr-wallet/types": "^0.10.5",
+		"jsdom": "^20.0.0",
 		"secretjs": "^1.3.0-beta.6"
 	}
 }
