--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"prettier-plugin-svelte": "^2.7.0",
 		"svelte": "^3.44.0",
 		"svelte-check": "^2.7.1",
+		"svelte-loading-spinners": "^0.1.7",
 		"typescript": "^4.7.2"
 	},
 	"type": "module",
